samples/_failures_safe/1761168937_9bfa5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc557bb0.c: In function ‘main’:
./samples/SAFE/__tmp_fc557bb0.c:152:30: error: expected ‘)’ at end of input
  152 |     buffer_free(&decompressed
      |                ~             ^
      |                              )
./samples/SAFE/__tmp_fc557bb0.c:152:5: error: expected declaration or statement at end of input
  152 |     buffer_free(&decompressed
      |     ^~~~~~~~~~~
